--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main ]
     paths:
+      - '.github/workflows/**'
       - 'server/**'
 
 jobs:
@@ -17,12 +18,13 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.17
-        
-    - name: Navigate to folder
-      run: cd server
 
     - name: Build
-      run: go build -v
+      run: |
+        cd server
+        go build -v
 
     - name: Run vet
-      run: go vet
+      run: |
+        cd server
+        go vet
