--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,3 +28,19 @@ jobs:
       run: |
         cd server
         go vet
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Deploy to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+        heroku_app_name: 'mezzonic-solver'
+        heroku_email: ${{secrets.HEROKU_EMAIL}}
+        appdir: 'server'
+        dontautocreate: true
+        dontuseforce: true
