--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,14 +17,14 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17
+        go-version: 1.18
 
     - name: Build
-      working_directory: ./server
+      working-directory: ./server
       run: go build -v
 
     - name: Run vet
-      working_directory: ./server
+      working-directory: ./server
       run: go vet
 
   deploy:
