--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -8,24 +8,33 @@ on:
       - 'client/**'
 
 jobs:
-  build:
+  publish:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
         node-version: 16
         cache: 'yarn'
         cache-dependency-path: client/yarn.lock
-        
+
     - name: Install dependencies
       working-directory: ./client
       run: yarn install
-      
+
     - name: Build
       working-directory: ./client
       run: yarn build
       env:
         REACT_APP_API_BASE_URL: ${{secrets.API_BASE_URL}}
+
+    - name: Publish
+      uses: netlify/actions/cli@master
+      working-directory: ./client
+      with:
+        args: deploy --dir=build --prod
+      env:
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
