--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,9 +32,8 @@ jobs:
 
     - name: Publish
       uses: netlify/actions/cli@master
-      working-directory: ./client
       with:
-        args: deploy --dir=build --prod
+        args: deploy --dir=client/build --prod
       env:
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
