--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, development ]
     paths:
       - '.github/workflows/go.yml'
       - 'server/**'
@@ -27,9 +27,24 @@ jobs:
       working-directory: ./server
       run: go vet
 
+  test:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.18
+
+    - name: Test
+      working-directory: ./server
+      run: go test ./...
+
   deploy:
     runs-on: ubuntu-latest
     needs: [ build ]
+    if: github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v2
 
