Fix SonarQube issues on the frontend

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -29,7 +29,7 @@ jobs:
           args: >
             -Dsonar.organization=martinekvili
             -Dsonar.projectKey=mezzonic-solver
-            -Dsonar.exclusions=**/*_test.go
+            -Dsonar.exclusions=**/*_test.go,**/report.json
             -Dsonar.test.inclusions=**/*_test.go
             -Dsonar.go.tests.reportPaths=server/report.json
             -Dsonar.go.coverage.reportPaths=server/coverage.out
