--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -31,7 +31,7 @@ jobs:
             -Dsonar.projectKey=mezzonic-solver
             -Dsonar.sources=.
             -Dsonar.exclusions=**/*_test.go,**/report.json
-            _Dsonar.tests=.
+            -Dsonar.tests=.
             -Dsonar.test.inclusions=**/*_test.go
             -Dsonar.go.tests.reportPaths=server/report.json
             -Dsonar.go.coverage.reportPaths=server/coverage.out
