Minor changes to SonarCloud analysis configuration

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -29,9 +29,9 @@ jobs:
           args: >
             -Dsonar.organization=martinekvili
             -Dsonar.projectKey=mezzonic-solver
-            -Dsonar.sources=.
+            -Dsonar.sources=server,client
             -Dsonar.exclusions=**/*_test.go,**/report.json
-            -Dsonar.tests=.
+            -Dsonar.tests=server,client
             -Dsonar.test.inclusions=**/*_test.go
             -Dsonar.go.tests.reportPaths=server/report.json
             -Dsonar.go.coverage.reportPaths=server/coverage.out
