--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -43,7 +43,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build ]
+    needs: [ build, test ]
     if: github.ref == 'refs/heads/main'
     steps:
     - uses: actions/checkout@v2
