--- a/server/.vscode/launch.json
+++ b/server/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Package",
+            "name": "Launch",
             "type": "go",
             "request": "launch",
-            "mode": "auto",
-            "program": "${fileDirname}",
+            "mode": "debug",
+            "program": "${workspaceFolder}/main.go",
             "env": {
                 "PORT": "8080",
                 "FRONTEND_URL": "http://localhost:3000"
