--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,14 +49,14 @@ jobs:
    
     runs-on: ubuntu-latest
     needs: [ build, test ]
-#    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     steps:
     - name: Checkout
       uses: actions/checkout@v3
 
     - name: Google Cloud Auth
       id: auth
-      uses: 'google-github-actions/auth@v0'
+      uses: google-github-actions/auth@v0
       with:
         token_format: 'access_token'
         workload_identity_provider: '${{ secrets.GCLOUD_IDENTITY_PROVIDER }}'
@@ -65,7 +65,7 @@ jobs:
     # Authenticate Docker to Google Cloud Artifact Registry
     - name: Docker Auth
       id: docker-auth
-      uses: 'docker/login-action@v2'
+      uses: docker/login-action@v2
       with:
         username: 'oauth2accesstoken'
         password: '${{ steps.auth.outputs.access_token }}'
@@ -76,3 +76,13 @@ jobs:
       run: |-
         docker build -t "europe-west1-docker.pkg.dev/mezzonic-solver/mezzonic-solver/mezzonic-solver" .
         docker push "europe-west1-docker.pkg.dev/mezzonic-solver/mezzonic-solver/mezzonic-solver"
+
+    - name: Deploy to Cloud Run
+      id: deploy
+      uses: google-github-actions/deploy-cloudrun@v0
+      with:
+        service: mezzonic-solver
+        region: europe-west1
+        image: europe-west1-docker.pkg.dev/mezzonic-solver/mezzonic-solver/mezzonic-solver
+        env_vars: FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+        timeout: 30s
